<resources>
    <string name="a_m">a.m.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_footer">Made with ❤️ in Slovakia</string>
    <string name="accent_color_black_and_white">Accent color of Black &amp; White theme</string>
    <string name="accent_color_white">Accent color of white theme</string>
    <string name="add_a_blocked_number">Add a blocked number</string>
    <string name="add_favorites">Add favorites</string>
    <string name="add_fingerprint">Add fingerprint</string>
    <string name="add_new_sound">Add a new sound</string>
    <string name="add_number_to_contact">Add number to contact</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="additional_info">Additional info</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_goes_off_in">"Time remaining till the alarm goes off:
%s"</string>
    <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
    <string name="album">Album</string>
    <string name="allow_zooming_canvas">Allow zooming the canvas with gestures</string>
    <string name="allow_zooming_moving_canvas">Allow zooming and moving the canvas with gestures</string>
    <string name="altitude">Altitude</string>
    <string name="always">Always</string>
    <string name="an_error_occurred">An error occurred: %s</string>
    <string name="apng_text">"Copyright (C) 2019 Zhou Pengfei

Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License.You may obtain a copy of the License at

https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="apng_title">APNG Android (animated WebP support)</string>
    <string name="apng_url">https://github.com/penfeizhou/APNG4Android</string>
    <string name="app_icon_color">App icon color</string>
    <string name="app_icon_color_warning">WARNING: Some launchers do not handle app icon customization properly. In case the icon will disappear, try launching the app via Google Play or some widget, if available. Once launched, just set back the default orange icon #F57C00. You might have to reinstall the app in the worst case.</string>
    <string name="app_launcher_name">Draw</string>
    <string name="app_launcher_short">App Launcher</string>
    <string name="app_long_description">" Want to draw something creative but you have no paper? This app will suit you perfectly. Just pick a color and draw, it is as easy as that. You can either save the drawing in a file, print it or share it directly through email or social networks so that your friends can have some fun with it too. This hugely popular app for quick sketches provides many useful functions like Undo/Redo, changing the background color, or using an image as the background. You can optionally make the app prevent the device from falling asleep too. You can also change the brush size, or use an eraser, if you messed something up. It supports inserting colors either by selecting it on a huge palette, or by entering the colors hex code. The app supports many different formats like PNG, JPG or SVG vectors. You can either draw something new from scratch, or open some file and just play around with it. It is perfectly usable either by you, or by a family with children to play some games. After all, everyone has a piece of artist in himself. You will not find any fancy or advanced tools, brushes, fonts, filters here, it is supposed to be used to have some fun with. It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps. Contains no ads or unnecessary permissions. It is fully opensource, provides customizable colors. "<b>Check out the full suite of Simple Tools here:</b> https://www.simplemobiletools.com <b>Facebook:</b> https://www.facebook.com/simplemobiletools <b>Reddit:</b>" https://www.reddit.com/r/SimpleMobileTools "</string>
    <string name="app_name">Simple Draw</string>
    <string name="app_on_sd_card">"You seem to have the app installed on an SD card, that makes the app widgets unavailable. You won't even see them on the list of available widgets. It is a system limitation, so if you want to use the widgets, you have to move the app back on the internal storage."</string>
    <string name="app_short_description">Pen and paper for your quick sketches.</string>
    <string name="app_title">Simple Draw Pro - App for quick &amp; easy sketches</string>
    <string name="app_version">App version: %s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="append">"Append with '_1'"</string>
    <string name="append_filenames">Append filenames</string>
    <string name="apply_to_all">Apply to all</string>
    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
    <string name="april">April</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
    <string name="artist">Artist</string>
    <string name="ascending">Ascending</string>
    <string name="at_start">At start</string>
    <string name="audio_record_view_text">"Copyright (C) 2020 Armen Gevorgyan

Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License.You may obtain a copy of the License at

https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="audio_record_view_title">Audio Record View (audio visualization)</string>
    <string name="audio_record_view_url">https://github.com/Armen101/AudioRecordView</string>
    <string name="august">August</string>
    <string name="authenticate">Authenticate</string>
    <string name="authentication_blocked">Authentication blocked, please try again in a moment</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="auto_theme">Auto</string>
    <string name="autofittextview_text">"Copyright 2014 Grantland Chew

Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at

https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
    <string name="autofittextview_url">https://github.com/grantland/android-autofittextview</string>
    <string name="background_color">Background color</string>
    <string name="before_asking_question">Before you ask a question, please first read the</string>
    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
    <string name="before_rate_read_faq">Before you rate us, please check the app settings and read the Frequently Asked Questions first. If you have any problems, maybe the solution is there.</string>
    <string name="biometrics">Biometrics</string>
    <string name="black_white">Black &amp; White</string>
    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
    <string name="block_number">Block number</string>
    <string name="block_numbers">Block numbers</string>
    <string name="blocked_numbers">Blocked numbers</string>
    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="calculator_short">Calculator</string>
    <string name="calendar_short">Calendar</string>
    <string name="call">Call</string>
    <string name="call_from_sim_1">Call from SIM 1</string>
    <string name="color_customization">Color customization</string>
    <string name="customize_colors">Customize colors</string>
    <string name="days_raw">days</string>
    <string name="force_portrait_mode">Force portrait mode</string>
    <string name="general_settings">General</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="hours_raw">hours</string>
    <string name="minutes_raw">minutes</string>
    <string name="place_finger">Please place your finger on the fingerprint sensor</string>
    <string name="prepend_filenames">Prepend filenames</string>
    <string name="prevent_phone_from_sleeping">Prevent phone from sleeping while the app is in foreground</string>
    <string name="primary_color">Primary color</string>
    <string name="seconds_raw">seconds</string>
    <string name="show_brush_size">Show brush size tool</string>
    <string name="string_to_add">String to add</string>
    <string name="text_color">Text color</string>
    <string name="theme">Theme</string>
    <string name="use_english_language">Use English language</string>
</resources>