<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/dialog_custom_interval_scrollview" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/dialog_custom_interval_holder" android:paddingLeft="@dimen/activity_margin" android:paddingTop="@dimen/activity_margin" android:paddingRight="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.simplemobiletools.commons.views.MyEditText android:textSize="@dimen/normal_text_size" android:id="@id/dialog_custom_interval_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="6" android:maxLength="5" android:digits="\ 0123456789" android:inputType="number" android:textCursorDrawable="@null" />
        <RadioGroup android:id="@id/dialog_radio_view" android:paddingTop="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/dialog_radio_seconds" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/seconds_raw" />
            <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/dialog_radio_minutes" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/minutes_raw" />
            <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/dialog_radio_hours" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hours_raw" />
            <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/dialog_radio_days" android:paddingTop="@dimen/activity_margin" android:paddingBottom="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/days_raw" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>