<?xml version="1.0" encoding="utf-8"?>
<com.simplemobiletools.commons.views.FingerprintTab android:id="@id/fingerprint_lock_holder" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.simplemobiletools.commons.views.MyTextView android:id="@id/fingerprint_lock_title" android:padding="@dimen/activity_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_fingerprint" />
    <ImageView android:id="@id/fingerprint_image" android:layout_width="@dimen/fingerprint_icon_size" android:layout_height="@dimen/fingerprint_icon_size" android:layout_marginTop="@dimen/activity_margin" android:src="@drawable/ic_fingerprint_vector" android:layout_below="@id/fingerprint_lock_title" android:layout_centerHorizontal="true" />
    <com.simplemobiletools.commons.views.MyTextView android:gravity="center" android:id="@id/fingerprint_label" android:padding="@dimen/activity_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_margin" android:layout_marginRight="@dimen/activity_margin" android:text="@string/place_finger" android:layout_below="@id/fingerprint_image" android:layout_centerHorizontal="true" />
    <com.simplemobiletools.commons.views.MyTextView android:id="@id/fingerprint_settings" android:background="@drawable/button_background" android:padding="@dimen/normal_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/go_to_settings" android:layout_below="@id/fingerprint_label" android:layout_centerHorizontal="true" />
</com.simplemobiletools.commons.views.FingerprintTab>