<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/customization_scrollview" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/customization_holder" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/customization_theme_holder" android:background="?selectableItemBackground" android:paddingLeft="@dimen/activity_margin" android:paddingTop="@dimen/bigger_margin" android:paddingRight="@dimen/activity_margin" android:paddingBottom="@dimen/bigger_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/medium_margin">
            <com.simplemobiletools.commons.views.MyTextView android:id="@id/customization_theme_label" android:paddingLeft="@dimen/medium_margin" android:paddingRight="@dimen/medium_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/theme" android:layout_centerVertical="true" android:layout_toStartOf="@id/customization_theme" />
            <com.simplemobiletools.commons.views.MyTextView android:id="@id/customization_theme" android:background="@null" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/medium_margin" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/customization_text_color_holder" android:background="?selectableItemBackground" android:padding="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/medium_margin" android:layout_below="@id/customization_theme_holder">
            <com.simplemobiletools.commons.views.MyTextView android:id="@id/customization_text_color_label" android:paddingLeft="@dimen/medium_margin" android:paddingRight="@dimen/medium_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_color" android:layout_centerVertical="true" />
            <ImageView android:id="@id/customization_text_color" android:clickable="false" android:layout_width="@dimen/color_sample_size" android:layout_height="@dimen/color_sample_size" android:layout_marginEnd="@dimen/medium_margin" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/customization_background_color_holder" android:background="?selectableItemBackground" android:padding="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/medium_margin" android:layout_below="@id/customization_text_color_holder">
            <com.simplemobiletools.commons.views.MyTextView android:id="@id/customization_background_color_label" android:paddingLeft="@dimen/medium_margin" android:paddingRight="@dimen/medium_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/background_color" android:layout_centerVertical="true" />
            <ImageView android:id="@id/customization_background_color" android:clickable="false" android:layout_width="@dimen/color_sample_size" android:layout_height="@dimen/color_sample_size" android:layout_marginEnd="@dimen/medium_margin" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/customization_primary_color_holder" android:background="?selectableItemBackground" android:padding="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/medium_margin" android:layout_below="@id/customization_background_color_holder">
            <com.simplemobiletools.commons.views.MyTextView android:id="@id/customization_primary_color_label" android:paddingLeft="@dimen/medium_margin" android:paddingRight="@dimen/medium_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/primary_color" android:layout_centerVertical="true" />
            <ImageView android:id="@id/customization_primary_color" android:clickable="false" android:layout_width="@dimen/color_sample_size" android:layout_height="@dimen/color_sample_size" android:layout_marginEnd="@dimen/medium_margin" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/customization_accent_color_holder" android:background="?selectableItemBackground" android:padding="@dimen/activity_margin" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/medium_margin" android:layout_below="@id/customization_primary_color_holder">
            <com.simplemobiletools.commons.views.MyTextView android:id="@id/customization_accent_color_label" android:paddingLeft="@dimen/medium_margin" android:paddingRight="@dimen/medium_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/accent_color_white" android:layout_centerVertical="true" />
            <ImageView android:id="@id/customization_accent_color" android:clickable="false" android:layout_width="@dimen/color_sample_size" android:layout_height="@dimen/color_sample_size" android:layout_marginEnd="@dimen/medium_margin" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/customization_app_icon_color_holder" android:background="?selectableItemBackground" android:padding="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/medium_margin" android:layout_below="@id/customization_accent_color_holder">
            <com.simplemobiletools.commons.views.MyTextView android:id="@id/customization_app_icon_color_label" android:paddingLeft="@dimen/medium_margin" android:paddingRight="@dimen/medium_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_icon_color" android:layout_centerVertical="true" />
            <ImageView android:id="@id/customization_app_icon_color" android:clickable="false" android:layout_width="@dimen/color_sample_size" android:layout_height="@dimen/color_sample_size" android:layout_marginEnd="@dimen/medium_margin" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/customization_navigation_bar_color_holder" android:background="?selectableItemBackground" android:padding="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/medium_margin" android:layout_below="@id/customization_app_icon_color_holder">
            <com.simplemobiletools.commons.views.MyTextView android:id="@id/customization_navigation_bar_color_label" android:paddingLeft="@dimen/medium_margin" android:paddingRight="@dimen/medium_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bottom_navigation_bar_color" android:layout_centerVertical="true" />
            <ImageView android:id="@id/customization_navigation_bar_color" android:clickable="false" android:layout_width="@dimen/color_sample_size" android:layout_height="@dimen/color_sample_size" android:layout_marginEnd="@dimen/medium_margin" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/apply_to_all_holder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/big_margin" android:layout_below="@id/customization_navigation_bar_color_holder" android:layout_centerHorizontal="true">
            <android.widget.TextView android:id="@id/apply_to_all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apply_to_all_apps" style="@style/ColoredButtonStyle" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>